--- a/Resources/UI/qSlicerTrackerStabilizerFilteringWidget.ui
+++ b/Resources/UI/qSlicerTrackerStabilizerFilteringWidget.ui
@@ -55,11 +55,11 @@
          <string>vtkMRMLLinearTransformNode</string>
         </stringlist>
        </property>
-       <property name="renameEnabled">
-        <bool>true</bool>
-       </property>
        <property name="baseName">
         <string>TrackerStabilizerFiltering</string>
+       </property>
+       <property name="renameEnabled">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -81,54 +81,63 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Smoother</string>
           </property>
          </widget>
         </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
+        <item row="1" column="1">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Faster</string>
           </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="ctkDoubleSpinBox" name="DoubleSpinBox">
+          <property name="maximumSize">
+           <size>
+            <width>70</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="minimum">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>50.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>7.500000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="2">
+         <widget class="ctkDoubleSlider" name="FilteringValueWidget">
+          <property name="value">
+           <double>7.500000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.500000000000000</double>
+          </property>
+          <property name="minimum">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>50.000000000000000</double>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
          </widget>
         </item>
        </layout>
-      </item>
-      <item>
-       <widget class="ctkDoubleSlider" name="FilteringValueWidget">
-        <property name="value">
-         <double>7.500000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.500000000000000</double>
-        </property>
-        <property name="minimum">
-         <double>1.000000000000000</double>
-        </property>
-        <property name="maximum">
-         <double>50.000000000000000</double>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
       </item>
      </layout>
     </widget>
@@ -146,7 +155,45 @@
    <extends>QWidget</extends>
    <header>ctkDoubleSlider.h</header>
   </customwidget>
+  <customwidget>
+   <class>ctkDoubleSpinBox</class>
+   <extends>QWidget</extends>
+   <header>ctkDoubleSpinBox.h</header>
+  </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>FilteringValueWidget</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>DoubleSpinBox</receiver>
+   <slot>setValue(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>268</x>
+     <y>189</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>193</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>DoubleSpinBox</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>FilteringValueWidget</receiver>
+   <slot>setValue(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>372</x>
+     <y>176</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>325</x>
+     <y>185</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
